# image-pdf-tools

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  append-image-page.py  docker-compose.yml  make-image-grid.py  production-threat-findings.md  pyproject.toml  requirements.txt  run-image-pdf-tools.bat  run-image-pdf-tools.sh  test_atomic_writes.py
docs/: append-image-page.md  image-grid.md  internal-tool-findings.md  production-threat-findings.md  receipt-processor-internals.md  receipt-processor.md
scripts/: append-image-page.py  make-image-grid.py
src/receipt_processor/: __init__.py  aggregation.py  cli.py  config.py  models.py  pipeline.py  storage.py  validation.py  vision_llm.py
tests/: test_atomic_writes.py
tests/receipt_processor/: test_cli.py  test_config.py  test_pipeline.py  test_storage.py  test_vision_llm.py
